Page manager search 7.x-1.1, 2013-01-24
--------------------------------------------------------------------------------

- Added Search API module integration.



Page manager search 7.x-1.0, 2013-01-16
--------------------------------------------------------------------------------

- Initial 7.x release.