@@ -1,3 +1,13 @@
+Page manager search 7-x.1.x-dev, xxxx-xx-xx (Development release)
+--------------------------------------------------------------------------------
+
+- #2494951 by labboy0276, deanflory: Added entity base table property.
+- #2378665 by pirog: Fixed issue with long SIDs.
+- Added basic simpletest.
+- Fixed issue where content isn't rendered correctly.
+
+
+
 Page manager search 7.x-1.1, 2013-01-24
 --------------------------------------------------------------------------------
 
